# pruebas

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  prueba  prueba.cbp
.cmake/api/v1/reply/: cache-v2-a5221748dd5c049e473a.json  cmakeFiles-v1-e98f816791a80aca5b35.json  codemodel-v2-7de51a72de194deb9d25.json  directory-_deps.fmt-build-Debug-da3c758e979d2c3009f2.json  index-2023-08-16T06-55-23-0104.json  target-fmt-Debug-a2c6761cc31624d7048f.json  target-prueba-Debug-46ba59f361450bd3c235.json
CPM_modules/: Findfmt.cmake
cmake/: CPM.cmake
